--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
 	"name": "foundry",
 	"description": "Foundry is a modern, object oriented JavaScript framework built for speed of development, flexibility and file size.",
-	"version": "0.0.7",
+	"version": "0.1.0",
 	"homepage": "https://github.com/gburghardt/foundry",
 	"authors": [
 		"Greg Burghardt <greg_burghardt@yahoo.com>"
@@ -10,10 +10,18 @@
 	"repository": { "type": "git", "url": "https://github.com/gburghardt/foundry.git" },
 	"main": [
 		"src/foundry.js",
-		"src/foundry/application.js"
+		"src/foundry/application.js",
+		"src/foundry/application_events_controller.js",
+		"src/foundry/error_handler.js",
+		"src/foundry/module_factory.js",
+		"src/foundry/module_observer.js",
+		"src/foundry/new_module_controller.js"
 	],
 	"dependencies": {
-        "module_controller": "1.2.1",
-		"hypodermic": "1.0.0"
+		"oxydizr": "~1.0.0",
+		"module-manager": "~1.0.0",
+		"module-base": "~1.0.0",
+		"module-utils": "~1.0.0",
+		"hypodermic": "~2.0.0"
 	}
 }
