First pass at using Grunt.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "jasmine": "https://github.com/pivotal/jasmine.git"
+    "grunt-contrib-uglify": "~0.2.2"
   }
 }
