--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,8 @@
 		"src/application.js"
 	],
 	"dependencies": {
-		"module_controller": "1.0.1",
+		"modernizr": "~2.7.1",
+        "module_controller": "1.0.3",
 		"hypodermic": "1.0.0"
-	},
-	"devDependencies": {
-		"jasmine": "https://github.com/pivotal/jasmine.git"
 	}
 }
