--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0"
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-yui-compressor": "~0.3.3"
   }
 }
